Adopt feed service implemented. Added app icon.

--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -51,5 +51,6 @@
   "post": "Publicar",
   "postStoryHint": "¿Qué estás pensando?",
   "noStories": "No hay ninguna historia de las últimas 24 horas",
-  "addDescription": "Añade una descripción"
+  "addDescription": "Añade una descripción",
+  "unknownAge": "Edad desconocida"
 }
